--- a/about/index.html
+++ b/about/index.html
@@ -19,7 +19,7 @@
     <meta name="description" content="关于我">
 <meta property="og:type" content="website">
 <meta property="og:title" content="About">
-<meta property="og:url" content="http://example.com/abou/index.html">
+<meta property="og:url" content="http://example.com/about/index.html">
 <meta property="og:site_name" content="XiangXianWen">
 <meta property="og:description" content="关于我">
 <meta property="og:locale" content="en_US">
